# earwigbot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  LICENSE  README  README.md  README.rst  actions.py  bot.py  config.py  earwigbot.py  main.py  pyproject.toml  setup.py
bot/: blowfish.py  config.py  frontend.py  main.py  rules.py  watcher.py  watcher_logic.py
bot/classes/: __init__.py  base_command.py  base_task.py  connection.py  data.py  rc.py
bot/commands/: __init__.py  afc_report.py  afc_status.py  calc.py  chanops.py  crypt.py  ctcp.py  editcount.py  git.py  help.py  link.py  praise.py  registration.py  remind.py  replag.py  rights.py  tasks.py  test.py  threads.py
bot/tasks/: __init__.py  afc_catdelink.py  afc_copyvios.py  afc_dailycats.py  afc_history.py  afc_statistics.py  afc_undated.py  blptag.py  feed_dailycats.py  wrongmime.py
bot/wiki/: __init__.py  category.py  constants.py  exceptions.py  functions.py  page.py  site.py  user.py
config/: irc.py  irc_config.py  main.py  schedule.py  secure_config.py  watcher.py
core/: config.py  main.py
docs/: Makefile  conf.py  customizing.rst  index.rst  installation.rst  setup.rst  tips.rst  toolset.rst
docs/api/: earwigbot.commands.rst  earwigbot.config.rst  earwigbot.irc.rst  earwigbot.rst  earwigbot.tasks.rst  earwigbot.wiki.copyvios.rst  earwigbot.wiki.rst  modules.rst
earwigbot/: __init__.py  blowfish.py  bot.py  config.py  exceptions.py  frontend.py  lazy.py  main.py  managers.py  rules.py  runner.py  util.py  watcher.py
earwigbot/classes/: __init__.py  base_command.py  base_task.py  connection.py  data.py  rc.py
earwigbot/commands/: __init__.py  _old.py  access.py  afc_pending.py  afc_report.py  afc_status.py  afc_submissions.py  calc.py  chanops.py  cidr.py  crypt.py  ctcp.py  dictionary.py  editcount.py  geolocate.py  git.py  git_command.py  help.py  lag.py  langcode.py  link.py  notes.py  praise.py  quit.py  registration.py  remind.py  replag.py  restart.py  rights.py  stalk.py  test.py  threads.py  time.py  time_command.py  (+2 more)
irc/: Data.py  actions.py  base_command.py  command_handler.py  connection.py  data.py  frontend.py  rc.py  triggers.py  watcher.py  watcher_logic.py
lib/: blowfish.py
tests/: __init__.py  conftest.py  support.py  test_blowfish.py  test_calc.py  test_test.py
wiki/: base_task.py  task_manager.py
(+129 files in other folders)
